--- a/package.json
+++ b/package.json
@@ -1,55 +1,70 @@
 {
-  "name": "solana-wallets-vue",
-  "version": "0.6.1",
+  "name": "@solana/wallet-adapter-vue",
+  "type": "module",
+  "version": "0.1.0",
+  "packageManager": "pnpm@9.14.2",
   "description": "Solana wallet integration for Vue 3",
   "author": "Loris Leiva",
-  "license": "MIT",
+  "license": "Apache-2.0",
+  "repository": "https://github.com/mfactory-labs/solana-wallet-adapter-vue",
+  "sideEffects": false,
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/wallet-adapter-vue.js",
+      "require": "./dist/wallet-adapter-vue.cjs"
+    },
+    "./styles.css": "./styles.css"
+  },
+  "main": "./dist/wallet-adapter-vue.js",
+  "module": "./dist/wallet-adapter-vue.cjs",
   "files": [
     "dist",
     "src",
-    "styles.css",
-    "postcss.config.js"
+    "styles.css"
   ],
-  "main": "./dist/solana-wallets-vue.umd.js",
-  "module": "./dist/solana-wallets-vue.mjs",
   "typings": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/solana-wallets-vue.mjs",
-      "require": "./dist/solana-wallets-vue.umd.js",
-      "types": "./dist/index.d.ts"
-    },
-    "./styles.css": "./styles.css",
-    "./postcss.config.js": "./postcss.config.js"
-  },
   "scripts": {
     "dev": "vite",
-    "build": "vite build && vue-tsc --emitDeclarationOnly",
-    "demo": "vite build -c vite.demo.config.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "dependencies": {
-    "@solana-mobile/wallet-adapter-mobile": "^1.0.0",
-    "@solana/wallet-adapter-base": "^0.9.20",
-    "@solana/wallet-standard-wallet-adapter-base": "^1.0.0",
-    "@vueuse/core": "^9.3.0",
-    "@wallet-standard/app": "^1.0.1",
-    "@wallet-standard/base": "^1.0.1"
-  },
-  "devDependencies": {
-    "@project-serum/anchor": "^0.25.0",
-    "@solana/wallet-adapter-wallets": "^0.19.0",
-    "@solana/web3.js": "^1.66.0",
-    "@types/node": "18.8.0",
-    "@types/node-fetch": "^2.6.2",
-    "@vitejs/plugin-vue": "^3.1.2",
-    "typescript": "^4.8.4",
-    "vite": "^3.1.8",
-    "vue": "^3.2.25",
-    "vue-tsc": "^1.0.8"
+    "build": "vite build",
+    "demo": "vite dev -c vite.demo.config.ts",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix"
   },
   "peerDependencies": {
-    "@solana/web3.js": "^1.61.0",
-    "vue": "^3.2.25"
+    "@solana/web3.js": "^1.95.5",
+    "vue": "*"
+  },
+  "dependencies": {
+    "@solana-mobile/wallet-adapter-mobile": "^2.1.4",
+    "@solana/wallet-adapter-base": "^0.9.23",
+    "@solana/wallet-standard-wallet-adapter-base": "^1.1.2",
+    "@vueuse/core": "^11.3.0",
+    "@wallet-standard/app": "^1.1.0",
+    "@wallet-standard/base": "^1.1.0"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^3.10.0",
+    "@coral-xyz/anchor": "^0.30.1",
+    "@solana/wallet-adapter-wallets": "^0.19.32",
+    "@types/node": "^20.10.0",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "eslint-plugin-format": "^0.1.2",
+    "typescript": "5.6.3",
+    "vite": "^6.0.0",
+    "vite-plugin-dts": "^4.3.0",
+    "vue": "^3.5.13"
+  },
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "react",
+        "react-native",
+        "react-dom"
+      ]
+    },
+    "overrides": {
+      "elliptic@<6.6.0": ">=6.6.0"
+    }
   }
 }
