--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "type": "module",
   "version": "0.1.0",
   "packageManager": "pnpm@9.14.2",
-  "description": "Solana wallet integration for Vue 3",
+  "description": "Solana Wallet Adapter for Vue",
   "author": "Loris Leiva",
-  "license": "Apache-2.0",
+  "contributors": [
+    {
+      "name": "Vladyslav Korniienko",
+      "email": "vk.tiamo@gmail.com"
+    }
+  ],
+  "license": "MIT",
   "repository": "https://github.com/mfactory-labs/solana-wallet-adapter-vue",
   "sideEffects": false,
   "exports": {
@@ -27,7 +33,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "demo": "vite dev -c vite.demo.config.ts",
+    "demo": "pnpm -F demo run",
     "lint": "eslint",
     "lint:fix": "eslint --fix"
   },
@@ -45,8 +51,6 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.10.0",
-    "@coral-xyz/anchor": "^0.30.1",
-    "@solana/wallet-adapter-wallets": "^0.19.32",
     "@types/node": "^20.10.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "eslint-plugin-format": "^0.1.2",
@@ -64,7 +68,10 @@
       ]
     },
     "overrides": {
-      "elliptic@<6.6.0": ">=6.6.0"
+      "bs58": ">=5.0.0",
+      "elliptic@<6.6.0": ">=6.6.0",
+      "react": ">=18.0.0",
+      "react-dom": ">=18.0.0"
     }
   }
 }
