--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
-    "@solana/wallet-adapter-vue": "file:../../",
+    "@solana/wallet-adapter-vue": "workspace:",
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.95.5"
   },
